// Code generated by tools/proto/build.go.
syntax = "proto3";
option optimize_for = LITE_RUNTIME;
option go_package = "./msgid";
package msgid;

// Client向Server发送消息
enum MsgIDC2S
{
	 C2SNone	= 0;
	 C2SInit	= 1;
	 C2SLogin	= 5;
	 C2SHeartBeat	= 7;
	 C2SGateHandle	= 100;
	 C2SWithoutRole	= 101;
	 C2SClientReady	= 102;
	 C2SBindAcc	= 103;
	
};